--- a/actinium/appserver/apps/config_discoverer.cfg
+++ b/actinium/appserver/apps/config_discoverer.cfg
@@ -1,11 +1,11 @@
-#Thu Sep 10 14:38:50 CEST 2015
+#Thu Dec 29 15:54:42 SGT 2016
+name=discoverer
 start_on_startup=true
-name=timer
-app=timer
+app=discoverAndroidServer
 allow_error_output=true
 availability=available
 allow_output=true
-running=start
+running=stop
 enable_request_delivery=true
 type=javascript
 dir_path=appserver/installed/
