--- a/actinium/src/pom.xml
+++ b/actinium/src/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>org.eclipse.californium</groupId>
 	<artifactId>actinium</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>sx</version>
 	<packaging>jar</packaging>
 
 	<name>Actinium (Ac)</name>
