Figured out the way to count execution time with multi-threaded java applications

--- a/actinium/src/appserver_tmp/apps/config_test_extend2.cfg
+++ b/actinium/src/appserver_tmp/apps/config_test_extend2.cfg
@@ -1,7 +1,7 @@
-#Mon Jan 16 15:24:05 SGT 2017
-name=requ
+#Sun Jan 29 20:28:37 SGT 2017
+name=test_extend2
 start_on_startup=true
-app=requestTest
+app=test_extend2
 allow_error_output=true
 availability=available
 allow_output=true
